# split-pdf

./: .gitignore  README.md  __main__.py  cli.py  controller.py  pyproject.toml  setup.py  util.py
split-pdf/: __main__.py  config.py  controller.py  pdf.py
split_pdf/: __init__.py  __main__.py  cli.py  config.py  controller.py  pdf.py  util.py
